# sportradar-api

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check.yml  docs.yml  publish.yml
SoccerExtended/: index.html
SoccerExtendedPandas/: index.html
docs/: SoccerExtended.md  SoccerExtendedPandas.md  index.md  mkdocs.yml
search/: search_index.json
sportradar_api/: __init__.py  main.py
sportradar_api/soccer_extended/: soccer_extended.py  soccer_extended_pandas.py
sportradar_api/utils/: utils.py
sportradar_api_wrapper/: __init__.py  main.py
sportradar_api_wrapper/soccer_extended/: soccer_extended.py
