[tool.poetry]
name = "sportradar-api-wrapper"
version = "0.1.0"
description = ""
authors = ["Felipe Allegretti <felipe@allegretti.me>"]
readme = "README.md"
packages = [{include = "sportradar_api_wrapper"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[tool.black]
line-length = 120
verbose = true
preview = true

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120